--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "peerDependencies": {
     "webpack": ">=4.0.1"
   },
-  "description": "Detect modules with circular dependencies when bundling with webpack.",
+  "description": "Analyse how a section of a code base depends on another",
   "version": "5.2.2",
   "engines": {
     "node": ">=6.0.0"
